# minecraft-launcher-rs

./: .gitignore  Cargo.toml
src/: config.rs  error.rs  files.rs  gui.rs  http_client.rs  launcher.rs  launcher_paths.rs  launcher_runner.rs  launcher_version.rs  main.rs  platform.rs
src/gui/: loaded.rs  loading.rs
src/model/: mod.rs  version_type.rs
src/model/mojang/: mod.rs  mojang_version.rs  mojang_version_arguments.rs  mojang_version_manifest.rs  version_library.rs
src/model/mojang/assets/: asset_index.rs  mod.rs
src/model/mojang/runtime/: mod.rs  runtime_index.rs  runtime_manifest.rs
