[package]
name = "minecraft-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
uuid = { version = "1.11.0", features = ["v4"] }
zip-extract = "0.2.1"
